src/test/deca/context/valid/field_with_existing_class_type.deca
/*
    Description : Déclaration d'un champ avec comme classe une classe qui existe

    Résultat : OK
*/
class B{}
class A{
    B p;
}

