src/test/deca/context/invalid/field_with_unexisting_class_type.deca
/*
    Description : Déclaration d'un champ avec comme classe une classe qui existe pas

    Résultat : erreur contextuelle (deca:4:4)
*/
class A{
    B p;
}
// @expected_output deca:4:4

